--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/users.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/users.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <!--    <meta charset="UTF-8">-->
-    <meta charset="UTF-8"language="java" >
+    <meta charset="UTF-8" language="java" >
     <title>Title</title>
 </head>
 <body>
-<h1 th:text="${tablename}">CARS</h1>
+<h1 th:text="${tablename}">USERS</h1>
 <div>
     <table border="4" width="75%">
         <tr>
