--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
@@ -6,10 +6,15 @@
     <title></title>
 </head>
 <body>
+<h2>ADD/DELETE/UPDATE USERS</h2>
 <div>
-    <th:block th:each="msg : ${messages}">
-        <h1 th:text="${msg}"></h1>
-    </th:block>
+    <form action="/register" method="POST">
+        Name: <input type="text" name="name"/>
+        Lastname:<input type="text" name="lastname"/>
+        Age:<input type="text" name="age"/>
+        <input type="submit" value= "ADD">
+        <input type="submit" value= "DELETE">
+    </form>
 </div>
 </body>
 </html>
