--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/add.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/add.html
@@ -8,19 +8,28 @@
 <body>
 <h4>USERS</h4>
 <div>
-    <form th:action="@{/users}" th:method="post">
+    <form th:action="@{/add}" th:method="post" th:object="${user}">
         <p>Add new user</p>
-           <tr th:each="user : ${messages}">
-        <!--    <input th:id="${user.getId()}" type="hidden">-->
-            <label for="lastname">LastName</label>
-            <input name="lastname"type="text" id="lastname" required/>
-            <label for="name">Name</label>
-            <input name="name" type="text" id="name"required/>
-            <label for="age">Age</label>
-            <input name="age" type="number" id="age"required/>
-            <input type="submit" value="Add User">
+        <tr>
+             <label for="lastname">LastName</label>
+                <input name="lastname"type="text" id="lastname" required/>
+                <label for="name">Name</label>
+                <input name="name" type="text" id="name"required/>
+                <label for="age">Age</label>
+                <input name="age" type="number" id="age"required/>
+                <input type="submit" value="Add User">
         </tr>
-    </form>
+        <!--     <tr th:each="user : ${messages}">
+             <input type="hidden" name="id" th:value="${user.getId()}"/>
+             <label for="lastname">LastName</label>
+             <input name="lastname"type="text"th:value="${user.getLastName()}"id="lastname" required/>
+             <label for="name">Name</label>
+             <input name="name" type="text" th:value="${user.getName()}"id="name" required/>
+             <label for="age">Age</label>
+             <input name="age" type="number" th:value="${user.getAge()}"id="age"required/>
+             <input type="submit" value="Edit User">
+         </tr>-->
+ </form>
 </div>
 </body>
 </html>
