--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/users.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/users.html
@@ -10,19 +10,18 @@
     <table border="4" width="75%">
         <caption>Пользователи</caption>
         <tr>
-            <td>Id</td>
+            <td>Nr.</td>
             <td>Фамилия</td>
             <td>Имя</td>
             <td>Возраст</td>
             <td colspan="2">Action</td>
         </tr>
-
         <tr th:each="user : ${messages}">
             <td th:text="${user.getId()}"></td>
             <td th:text="${user.getLastName()}"></td>
             <td th:text="${user.getName()}"></td>
             <td th:text="${user.getAge()}"></td>
-            <td><a href="/edit"/>edit</a></td>
+            <td><a th:href="@{/edit/{id}(id=${user.getId()})}">edit</a></td>
             <td><a th:href="@{/delete/{id}(id=${user.getId()})}">delete</a></td>
         </tr>
         <tr>
