--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/add.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/add.html
@@ -8,27 +8,17 @@
 <body>
 <h4>USERS</h4>
 <div>
-    <form th:action="@{/add}" th:method="post" th:object="${user}">
+    <form th:action="@{/add}" th:method="post">
         <p>Add new user</p>
-        <tr>
-             <label for="lastname">LastName</label>
-                <input name="lastname"type="text" id="lastname" required/>
+            <tr>
+                <label for="lastName">LastName</label>
+                <input name="lastName"type="text"id="lastName"required/>
                 <label for="name">Name</label>
-                <input name="name" type="text" id="name"required/>
+                <input name="name" type="text"id="name"required/>
                 <label for="age">Age</label>
-                <input name="age" type="number" id="age"required/>
+                <input name="age" type="number"id="age"required/>
                 <input type="submit" value="Add User">
-        </tr>
-        <!--     <tr th:each="user : ${messages}">
-             <input type="hidden" name="id" th:value="${user.getId()}"/>
-             <label for="lastname">LastName</label>
-             <input name="lastname"type="text"th:value="${user.getLastName()}"id="lastname" required/>
-             <label for="name">Name</label>
-             <input name="name" type="text" th:value="${user.getName()}"id="name" required/>
-             <label for="age">Age</label>
-             <input name="age" type="number" th:value="${user.getAge()}"id="age"required/>
-             <input type="submit" value="Edit User">
-         </tr>-->
+            </tr>
  </form>
 </div>
 </body>
